Fixed front text and contacts displaying on mobile devices

--- a/app/assets/stylesheets/_bridge.scss
+++ b/app/assets/stylesheets/_bridge.scss
@@ -164,7 +164,7 @@ a.popup-link {
     right: 30%;
     overflow: hidden;
     height: 100%;
-   #light {
+    #light {
       position: relative;
       left: 120%;
       top: 0%;
@@ -178,5 +178,63 @@ a.popup-link {
         left: 20%;
       }
     }
+  }
+}
+
+@media (max-width: 1024px) {
+  #lazybox {
+    max-width: 95%;
+    .projects .project-wrapper .project-info .info-section {
+      width: 50%;
+    }
+
+    .projects .project-wrapper .project-info {
+      text-align: center;
+    }
+  }
+}
+
+@media (max-width: 640px) {
+  #lazybox {
+    max-width: 100%;
+    max-height: 100vh;
+    width: 100%;
+    height: 100%;
+
+    .active-content {
+      max-height: 88vh;
+    }
+
+    .active-content.members .member {
+      width: 49%;
+    }
+
+    .projects .project-wrapper .project {
+      max-height: 77vh;
+      padding: 0 15px;
+      box-sizing: border-box;
+    }
+  }
+
+  .section {
+    width: 100%;
+  }
+
+  .front .cloud {
+    width: 90%;
+  }
+
+  .contacts .info {
+    padding: 0;
+    max-width: 96vw;
+
+  }
+
+  .contacts .contacts-container .contact-section {
+    padding: 10px 26%;
+  }
+
+  .contacts .contacts-container {
+    text-align: center;
   }
 }
