--- a/app/assets/stylesheets/_defaults.scss
+++ b/app/assets/stylesheets/_defaults.scss
@@ -297,6 +297,8 @@ a {
   .section {
     width: 100%;
   }
+
+  .front .cloud {
+    width: 90%;
+  }
 }
-
-
